<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_FeederAutoState" Id="{e92d2993-653a-4bb9-8ccd-e5f5498f8d8f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE E_FeederAutoState :
(
	eState0_Reset				:= 0,
	eState1_MoveBackToTop		:= 1,
	eState2_MoveToTarget1PosX	:= 2,
	eState3_MoveToTarget1PosY	:= 3,
	eState4_Grab				:= 4,
	eState5_MoveBackToTop		:= 5,
	eState6_MoveToTarget2PosX	:= 6,
	eState7_MoveToTarget2PosY	:= 7,
	eState8_Place				:= 8
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>