<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_HmiAxisInfo" Id="{108dc280-5c78-4974-8cb3-13da664c8f2f}">
    <Declaration><![CDATA[TYPE ST_HmiAxisInfo :
STRUCT
	//Actual position
	fActPosition	: LREAL;
	//Actual velocity
	fActVelocity	: LREAL;
	//Current state of axis
	nAxisState		: UDINT;
	//Current mode of axis
	eAxisMode		: E_AxisMode;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>